# minimal_agents

./: README.md  pyproject.toml
agents/: __init__.py  base_agent.py  mbie.py  qlearning.py  rmax.py  sarsa.py
agents/examples/: __init__.py  riverswim_comparison.py  riverswim_mbie.py  riverswim_rmax.py
examples/: cartpole_q_learning.py
minimal_agents/: __init__.py
minimal_agents/agents/: __init__.py  base.py  mbie.py  q_learning.py  q_learning_intrinsic.py  rmax.py  sarsa.py
minimal_agents/policies/: __init__.py
qlearning/: __init__.py  qlearning.py
tests/: test_agent.py
